--- a/women/templates/women/post.html
+++ b/women/templates/women/post.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1></h1>
+<h1>{{post.title}}</h1>
+
+{% if post.photo %}
+<p><img src="img-article-left" src="{{post.photo.url}}"></p>
+{% endif %}
+
+{{post.content|linebreaks}}
+{% endblock %}
