--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,6 +11,7 @@
     <div class="form-errors">{{ f.errors }}</div>
     {% endfor %}
     <p><button type="submit">Войти</button></p>
-</form>
 
+    <p><a href="{% url 'users:password_reset' %}">Забыли пароль?</a></p>
+</form>
 {% endblock %}
